# bevy-devcontainer-template

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
